--- a/mob.css
+++ b/mob.css
@@ -15,3 +15,65 @@
     height: 50px;
     background-color: red;
 }
+
+.thePusher{
+    width: 150px;
+    height: 150px;
+    background-image: linear-gradient(to right, rgba(0, 255, 242, 0.918), rgb(0, 26, 255));
+}
+
+.eater{
+    width: 35px;
+    height: 30px;
+    background-color: lightgreen;
+}
+
+.shooter{
+    width: 25px;
+    height: 25px;
+    background-color: whitesmoke;
+}
+
+.titan{
+    width: 100px;
+    height: 100px;
+    background-image: linear-gradient(to left, rgba(0, 255, 242, 0.918), rgb(0, 26, 255));
+}
+
+.springer{
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 50px solid lightskyblue;
+    margin:-25px 0 0 -25px;
+    -webkit-animation:spin 2s linear infinite;
+    -moz-animation:spin 2s linear infinite;
+    animation:spin 2s linear infinite;
+}
+
+.teleJani{
+    width: 40px;
+    height: 40px;
+    background-color: blueviolet;
+}
+
+.smartMob{
+    width: 50px;
+    height: 50px;
+    background-color: rgb(0, 162, 255);
+}
+
+
+@-moz-keyframes spin { 
+    100% { -moz-transform: rotate(360deg); } 
+}
+@-webkit-keyframes spin { 
+    100% { -webkit-transform: rotate(360deg); } 
+}
+@keyframes spin { 
+    100% { 
+        -webkit-transform: rotate(360deg); 
+        transform:rotate(360deg); 
+    } 
+}
